--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,18 +1,18 @@
 <app-banner></app-banner>
 <div class="flex justify-center">
-<ng-container *ngFor="let x of products">
+<ng-container *ngFor="let item of Products">
   
     <div class=" w-72 ">
     <mat-card class="example-card ">
         <mat-card-header>
           <div mat-card-avatar class="example-header-image"></div>
-          <mat-card-title>{{x.name}}</mat-card-title>
+          <mat-card-title>{{item.title}}</mat-card-title>
           <mat-card-subtitle>Dog Breed</mat-card-subtitle>
         </mat-card-header>
         <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
         <mat-card-content>
           <p>
-            {{x.description}}
+            {{item.description}}
           </p>
         </mat-card-content>
         <mat-card-actions>
@@ -24,4 +24,9 @@
 
   
 </ng-container>
+
   </div>
+
+  <h3 *ngFor="let item of Posts">
+    {{item.title}}
+  </h3>
